--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,16 @@
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
     "types": ["node", "jest"],
-    "typeRoots": ["./src/types", "./types", "./node_modules/@types"], /* List of folders to include type definitions from. */
+    "typeRoots": [
+      "./src/types",
+      "./types",
+      "./node_modules/@types"
+    ] /* List of folders to include type definitions from. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "rootDir": "./src"
   },
-  "exclude": ["templates/**/*", "dist/**/*", "jest.config.ts", "node_modules"],
+  "exclude": ["./src/bak/**/*", "templates/**/*", "dist/**/*", "jest.config.ts", "node_modules"],
   "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
